[gd_scene load_steps=9 format=3 uid="uid://3daa5yh5dggb"]

[ext_resource type="Script" uid="uid://cdkmi1d0x6j6x" path="res://city_block.gd" id="1_ih8wv"]
[ext_resource type="Texture2D" uid="uid://i1jlh42uj5r6" path="res://artwork/city-block.png" id="1_x36e7"]
[ext_resource type="Resource" uid="uid://dlqdmmx1dpyne" path="res://shared_game_data.tres" id="2_jve3n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ih8wv"]
atlas = ExtResource("1_x36e7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jve3n"]
atlas = ExtResource("1_x36e7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdn2"]
atlas = ExtResource("1_x36e7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_721ut"]
atlas = ExtResource("1_x36e7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_03kkc"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih8wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jve3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_721ut")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="CityBlock" type="Area2D"]
script = ExtResource("1_ih8wv")
game_state = ExtResource("2_jve3n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_03kkc")
frame = 2
frame_progress = 0.3514775

[node name="FullHealthPolygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, -10, 16, 16, 24, 8, 32, 17, 32, 32, -32, 32, -32, 9, -16, 9, -16, -10)
disabled = true

[node name="TwoThirdsPolygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, -10, 16, 32, -32, 32, -32, 9, -16, 9, -16, -10, 16, -10)
disabled = true

[node name="OneThirdPolygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, -10, 16, 32, -16, 32, -16, -10)
disabled = true
